[project]
name = "multiplepdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.35.3",
    "instructorembedding>=1.0.1",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.6.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
]
